add conventions plugin